# clife

./: .gitignore  README.md  flake.nix  meson.build  shell.nix
src/: coord_set.c  coord_set.h  life.c  life.h  main.c  naive_life.c  naive_life.h  util.c  util.h
